--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </h1>
         <nav class="flex flex-wrap justify-center gap-6 mb-8">
             <h2 class="text-lg md:text-xl pixel-font hover:text-yellow-400 transition-colors">
-                <a href="#featured">Featured</a>
+                <a href="featured.html">Featured</a>
             </h2>
             <h2 class="text-lg md:text-xl pixel-font hover:text-yellow-400 transition-colors">
                 <a href="#popular">Popular</a>
@@ -96,6 +96,11 @@
                     <iframe src="https://itch.io/embed/250895">
                         <a href="https://fourquarters.itch.io/roulette-knight-ludum-dare-41">Roulette Knight (Ludum Dare 41) by Four Quarters team</a>
                     </iframe>
+                </div>
+                <div class="mt-6 text-center">
+                    <a href="roulette-knight.html" class="inline-block bg-yellow-400 text-gray-900 px-6 py-2 rounded-lg pixel-font text-sm hover:bg-yellow-300 transition-colors">
+                        View Full Page →
+                    </a>
                 </div>
             </div>
         </section>
