初始提交：weloveroguelike项目

--- a/featured.html
+++ b/featured.html
@@ -124,17 +124,17 @@
             <!-- 右侧游戏卡片瀑布流 -->
             <div class="flex-1">
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                    <!-- Roulette Knight -->
+                    <!-- Darkness Survivors -->
                     <div class="game-card bg-gray-900 bg-opacity-60 rounded-lg overflow-hidden">
                         <div class="aspect-w-16 aspect-h-9">
-                            <img src="asset/images/roulette-knight-thumb.jpg" alt="Roulette Knight" class="w-full h-full object-cover">
+                            <img src="asset/images/roulette-knight-thumb.jpg" alt="Darkness Survivors" class="w-full h-full object-cover">
                         </div>
                         <div class="p-4">
-                            <h3 class="text-xl text-yellow-400 pixel-font mb-2">Roulette Knight</h3>
+                            <h3 class="text-xl text-yellow-400 pixel-font mb-2">Darkness Survivors</h3>
                             <p class="text-gray-300 apple-font text-sm mb-4">A unique roguelike where every decision is a gamble.</p>
                             <div class="flex items-center justify-between">
                                 <span class="text-sm text-gray-400 apple-font">Action • Free</span>
-                                <a href="roulette-knight.html" class="text-yellow-400 hover:text-yellow-300 pixel-font text-sm">Play Now →</a>
+                                <a href="Darkness Survivors.html" class="text-yellow-400 hover:text-yellow-300 pixel-font text-sm">Play Now →</a>
                             </div>
                         </div>
                     </div>
