--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Discover and play the best roguelike and roguelite games online. Experience pixel-perfect dungeon crawling adventures in your browser.">
     <meta name="keywords" content="roguelike, roguelite, online games, dungeon crawler, pixel art games">
     <link rel="canonical" href="https://weloveroguelike.online" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YNZ5393PY3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YNZ5393PY3');
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
