--- a/featured.html
+++ b/featured.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Featured Games - WeLoveRoguelike</title>
     <meta name="description" content="Browse our collection of featured roguelike games. Filter by type, platform, and more.">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YNZ5393PY3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YNZ5393PY3');
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=SF+Pro+Display:wght@400;500;600&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
